--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ main {
 
 .card {
     width: 350px;
-    margin: 50px auto;
+    margin: 40px auto;
     border-radius: 15px;
     background: #fff;
     display: flex;
@@ -87,6 +87,7 @@ main {
 .card .plan .change-plan-btn {
     font-weight: 700;
     color: hsl(245, 75%, 52%);
+    font-size: .8rem;
 }
 
 .card button {
